{
    "name": "MyPlayerInput",
    "maps": [
        {
            "name": "CharacterController",
            "id": "8ebc07a9-25e5-4bc0-ab9d-d5a057220b6d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "521df14a-6c4a-4c59-bae2-9a52b1c6b4bc",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "9c002476-92d3-4d06-890e-635f79a30d97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ca75e86-fdcb-458e-841c-4519147cbfc6",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "542452bd-01bc-4bb0-9e5c-94866dafbc0c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ee68bc5-8057-41e5-9f70-c66dcdf835a0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c08b889b-ff9b-4fdb-a229-97f176655b50",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "710e6e02-f692-4488-801f-f6f19c7aa370",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0f9de6b1-a180-4659-878d-f46662cb08ec",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6dbeb9f8-7b76-463e-a703-c26c68179285",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HUDController",
            "id": "e66428ef-8ccd-454c-a248-5e3467df034e",
            "actions": [
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "932eab82-73f5-4464-91e9-606089a7a801",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CollectItem",
                    "type": "Button",
                    "id": "53c86c64-63b1-4616-b272-da8836ecfdba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c06aeedd-b030-4c3f-8580-4a6e07aa7388",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13327a80-f1a3-42a9-ad7b-b0c490b1d283",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CollectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}